# powder-orm

./: .gitignore  Cargo.toml  LICENSE  PACKAGING.md  README.dist.md  README.md  release.yml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: commit-summary.yml  release.yml
bindings/c/: README.md
bindings/c/include/: powder.h
bindings/c/test/: test_powder.c
bindings/cpp/: README.md
bindings/cpp/include/: powder.hpp
bindings/cpp/test/: test_powder.cpp
bindings/csharp/: README.md
bindings/csharp/Powder/: Client.cs  Native.cs  Orm.cs  Pcb.cs  Powder.csproj
bindings/csharp/Powder.Tests/: Powder.Tests.csproj  Program.cs
bindings/go/: README.md  go.mod  loader_unix.go  loader_windows.go  orm.go  orm_test.go  pcb.go  powder.go  powder_test.go  query.go
bindings/kotlin/: README.md
bindings/kotlin/src/dev/powder/: Powder.kt
bindings/kotlin/test/: KotlinTest.kt
crates/ncode-core/: Cargo.toml
crates/ncode-core/src/: client.rs  codec.rs
crates/ncode-core/tests/: parallel_scan.rs  profile.rs  query_cache.rs
crates/ncode-node/: Cargo.toml
crates/ncode-node/src/: lib.rs
crates/ncode-node/ts/: cache.test.ts  e2e.test.ts  index.ts  orm.test.ts  orm.ts  reader.ts
crates/ncode-python/python/ncode/: __init__.py  orm.py
crates/ncode-python/tests/: test_orm.py
crates/powder-cli/: Cargo.toml
crates/powder-cli/src/: cli.rs  codegen.rs  db.rs  dialect.rs  jsonschema.rs  lib.rs  main.rs  scaffold.rs  schema.rs
crates/powder-cli/tests/: mysql_migrate.rs  pg_migrate.rs
crates/powder-core/: Cargo.toml
crates/powder-core/src/: array.rs  batch.rs  client.rs  codec.rs  error.rs  guard.rs  lib.rs  ls.rs  ms.rs  my.rs  orm.rs  pg.rs  query.rs  schema.rs
crates/powder-core/tests/: injection_guard.rs  mysql_integration.rs  order_by.rs  parallel_scan.rs  pg_integration.rs  profile.rs  query_cache.rs  roundtrip.rs
crates/powder-ffi/: Cargo.toml
crates/powder-ffi/src/: lib.rs
crates/powder-java/: Cargo.toml  README.md  build-and-test.sh
crates/powder-java/java/: PowderTest.java
crates/powder-java/java/com/powder/: Batch.java  Client.java  Column.java  DataType.java  Json.java  Lifetime.java  Orm.java  PcbReader.java  Powder.java  PowderNative.java  Query.java
crates/powder-java/src/: lib.rs
crates/powder-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/powder-node/npm/darwin-arm64/: README.md  package.json
crates/powder-node/npm/darwin-x64/: README.md  package.json
crates/powder-node/npm/linux-arm64-gnu/: README.md  package.json
crates/powder-node/npm/linux-arm64-musl/: README.md  package.json
crates/powder-node/npm/linux-x64-gnu/: README.md  package.json
crates/powder-node/npm/linux-x64-musl/: README.md  package.json
crates/powder-node/npm/win32-arm64-msvc/: README.md  package.json
crates/powder-node/npm/win32-x64-msvc/: README.md  package.json
crates/powder-node/src/: lib.rs
crates/powder-node/ts/: index.ts  orm.test.ts  orm.ts  reader.test.ts  reader.ts
crates/powder-python/: Cargo.toml  pyproject.toml
crates/powder-python/python/powder/: __init__.py  _reader.py  orm.py
crates/powder-python/src/: lib.rs
crates/powder-python/tests/: test_e2e.py  test_groupby_or.py  test_orm.py
crates/powder-studio/: Cargo.toml
docs/: FORMAT.md
docs-site/: README.md  package-lock.json  package.json
docs-site/app/[lang]/: layout.tsx
docs-site/app/[lang]/(home)/: page.tsx
docs-site/app/api/search/: route.ts
docs-site/components/: benchmark.tsx  site-footer.tsx  support-dialog.tsx  support-form.tsx
docs-site/content/docs/: quickstart.en.mdx  quickstart.ja.mdx  quickstart.mdx  quickstart.zh.mdx
docs-site/content/docs/bindings/: python.en.mdx  python.ja.mdx  python.mdx  python.zh.mdx  rust.en.mdx  rust.ja.mdx  rust.mdx  rust.zh.mdx  typescript.en.mdx  typescript.ja.mdx  typescript.mdx  typescript.zh.mdx
docs-site/content/docs/tutorial/: 01-first-steps.mdx
docs-site/lib/: i18n-ui.ts  i18n.ts  shared.ts
docs-site/scripts/macmini/: README.md  commit-feed-append.py
examples/powder-demo/: demo.ts  models.ts  package.json  powder.schema.json  powder_models.py  tsconfig.json
jvm/: build.gradle.kts  gradle.properties
jvm/powder-java/: build.gradle.kts
jvm/powder-kotlin/: build.gradle.kts
scripts/: coverage.sh
verification/: README.md  SCENARIOS.md  powder.schema.json  run_matrix.ps1
verification/c/: realworld_queries.c  run.ps1
verification/cpp/: realworld_queries.cpp  run.ps1
verification/csharp/: Program.cs  Verification.csproj  run.ps1
verification/java/: RealworldQueries.java  run.ps1
verification/kotlin/: RealworldQueries.kt  run.ps1
verification/mssql/: mssql_smoke.cpp  run.ps1
verification/node/: package-lock.json  package.json  powder_models.ts  realworld_queries.mjs  realworld_queries.ts  run.ps1  tsconfig.json
verification/python/: powder_models.py  realworld_queries.py  run.ps1
