[package]
name = "powder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Powder ORM CLI — schema management, migration, seeding, validation, and AOT code generation"

[[bin]]
name = "powder"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Live PostgreSQL migrations/validation (`powder migrate --db postgres://...`).
postgres = "0.19"
# Live MySQL/MariaDB migrations/validation (`powder migrate --db mysql://...`).
mysql = { version = "25", default-features = false, features = ["minimal"] }
# Live SQL Server / libSQL migrations/validation - reuses the engine backends
# (they expose a synchronous surface).
powder-core = { workspace = true, features = ["mssql", "libsql"] }
