[package]
name = "powder-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js (napi-rs) bindings for the Powder engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
powder-core = { workspace = true, features = ["postgres", "mysql", "mssql", "libsql"] }
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
# Windows' default heap is slow for the allocation-heavy columnar build path;
# mimalloc measurably cuts cold-query latency.
mimalloc = "0.1"

[build-dependencies]
napi-build = "2"
